<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.user.lab3proj1.Activity1"
android:orientation="horizontal">

    <RelativeLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.7">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button1"
                android:onClick="onClick1 (Activity1)"
                tools:text="@string/but1"
                android:text="@string/but1" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:onClick="onClick2"
                tools:text="@string/but2"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/but2" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                android:onClick="onClick3"
                android:text="@string/but3" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button4"
                android:onClick="onClick4"
                android:text="@string/but4" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>
    </LinearLayout>

</RelativeLayout>
<RelativeLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.15">
</RelativeLayout>
</LinearLayout>
